# pyLearnFlask

./: .flaskenv  .gitattributes  .gitignore  .prettierrc.json  app.py  biome.json  deno.json  dprint.json  eslint.config.js  hello.py  pyproject.toml  requirements.txt  ruff.toml  test_watchlist.py
greybook/: __init__.py  config.py  emails.py  fakes.py  forms.py  models.py  utils.py
greybook/core/: commands.py  errors.py  extensions.py  logging.py  request.py  shell.py  templating.py
greybook/templates/: base.html  macros.html
greybook/templates/admin/: edit_category.html  edit_link.html  edit_post.html  manage_category.html  manage_comment.html  manage_link.html  manage_post.html  new_category.html  new_link.html  new_post.html  settings.html
greybook/templates/auth/: login.html
greybook/templates/blog/: _posts.html  _sidebar.html  about.html  category.html  index.html  post.html
greybook/templates/errors/: 400.html  404.html  500.html
greybook/views/: __init__.py  admin.py  auth.py  blog.py
sayhello/: __init__.py  commands.py  config.py  models.py  views.py
sayhello/static/css/: bootstrap.min.css  style.css
sayhello/static/js/: bootstrap.bundle.min.js  bootstrap.min.js  jquery-3.7.1.slim.min.js  moment-with-locales.js  moment-with-locales.min.js  script.js
sayhello/templates/: base.html  index.html
static/: style.css
templates/: base.html  index.html  login.html  settings.html
tests/: test_watchlist.py
watchlist/: __init__.py  commands.py  errors.py  models.py  views.py
watchlist/templates/: base.html  edit.html  index.html
watchlist/templates/errors/: 400.html  404.html  500.html
