[project]
requires-python = ">=3.12"


[tool.poetry]
name = "pylearnflask"
version = "0.1.0"
description = ""
authors = ["Ylgu Ytrid <37318504+YlguYtrid@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.1"
pytest = "^8.0.0"
viztracer = "^0.16.1"
coverage = "^7.4.1"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
ruff = "^0.2.0"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
