[project]
requires-python = ">=3.12"
name = "pyLearnFlask"
version = "0.1.0"
description = ""
authors = [
    {name = "Ylgu Ytrid", email = "37318504+YlguYtrid@users.noreply.github.com"},
]
dependencies = [
    "python-dotenv",
    "flask",
    "flask-login",
    "flask-sqlalchemy",
]
readme = "README.md"
license = {text = "MIT"}


[tool.poetry]
name = "pyLearnFlask"
version = "0.1.0"
description = ""
authors = ["Ylgu Ytrid <37318504+YlguYtrid@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
flask = "^3.0.2"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
flask-pydantic = "^0.12.0"
bootstrap-flask = "^2.3.3"
flask-moment = "^1.0.5"
faker = "^24.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pytest = "^8.0.1"
tox = "^4.14.2"
coverage = "^7.4.1"
viztracer = "^0.16.1"
watchdog = "^4.0.0"
flask-debugtoolbar = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
